--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,9 +24,9 @@
             {% if current_user.is_anonymous %}
                 <li><a href="{{ url_for('login') }}">Login</a></li>
             {% else %}
-                <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('clubs') }}">Clubs</a></li>
                 <li><a href="{{ url_for('add_club_form') }}">Add Club</a></li>
+                <li><a href="{{ url_for('my_events') }}">My Events</a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
             {% endif %}
           </ul>
