--- a/app/templates/club.html
+++ b/app/templates/club.html
@@ -3,5 +3,5 @@
 {% block app_content %}
     <h1>club.name</h1>
     <br>
-    <p>club.description</p>
+    <p>{{ club.description }}</p>
 {% endblock %}
