--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
+    <h1>Your clubs:</h1>
     <ul>
-        {% for m2c in member.m2c_list %}
-            <li>{{ m2c.club.name }}</li>
-        {% endfor %}
+    {% for m2c in member.m2c_list %}
+        <li><a href="{{ url_for('club', name=m2c.club.name)}}">{{ m2c.club.name }}</a></li>
+    {% endfor %}
     </ul>
 {% endblock %}
