--- a/app/templates/myEvents.html
+++ b/app/templates/myEvents.html
@@ -4,7 +4,7 @@
 
     <ul>
         {% for event in events %}
-            <li><b>{{ event.name }}</b> takes place at <b>{{ event.dateTime }}</b> on
+            <li><b>{{ event.name }}</b> takes place on <b>{{ event.dateTime }}</b> at
                 <b>{{ event.address }}</b></li>
         {% endfor %}
     </ul>
