--- a/app/templates/myEvents.html
+++ b/app/templates/myEvents.html
@@ -4,8 +4,7 @@
 
     <ul>
         {% for event in events %}
-            <li><b>{{ event.name }}</b> takes place on <b>{{ event.dateTime }}</b> at
-                <b>{{ event.address }}</b></li>
+            <li><a href="{{ url_for('event', name=event.name)}}">{{ event.name }}</a></li>
         {% endfor %}
     </ul>
 
