--- a/app/templates/club.html
+++ b/app/templates/club.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>club.name</h1>
+    {{ wtf.quick_form(form) }}
+    <h1>{{ club.name }}</h1>
     <br>
     <p>{{ club.description }}</p>
 {% endblock %}
