--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -2,22 +2,27 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk"></script>
 {% block app_content %}
+
+    <div class="row">
+        <h1>{{ event.name }}</h1>
+        <br>
+        <p>Hosting Club: {{ club.name }}</p>
+        <p>Event Time: {{ event.dateTime }}</p>
+        <p>Location: {{ event.address }}</p>
+    </div>
+
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
     </div>
 
-    <h1>{{ event.name }}</h1>
     <br>
-    <p>Hosting Club: {{ event.club }}</p>
-    <p>Event Time: {{ event.date_time }}</p>
-    <p>Location: {{ event.location }}</p>
 
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapquest example</title>
+    <title>Event Location</title>
     <style>
       #map {
         width: 600px;
@@ -39,13 +44,17 @@
           layers: L.mapquest.tileLayer('map'),
           zoom: 12
         });
-      }
+
+        L.marker([{{ lat }}, {{ lng }}], {
+          icon: L.mapquest.icons.marker(),
+          draggable: false
+        }).bindPopup('{{ event.address }}').addTo(map);
+      };
     </script>
   </head>
-  <body>
-    <h1>{{ event.location }}</h1>
 
-    <div id="map"></div>
+  <body style=" border: 0; margin: 0;">
+    <div id="map" style="width: 75%; height: 350px;"></div>
   </body>
 
 {% endblock %}
