Changes by NStaub

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -26,6 +26,7 @@
             {% else %}
                 <li><a href="{{ url_for('clubs') }}">Clubs</a></li>
                 <li><a href="{{ url_for('add_club_form') }}">Add Club</a></li>
+                <li><a href="{{ url_for('add_event_form') }}">Add Event</a></li>
                 <li><a href="{{ url_for('my_events') }}">My Events</a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
             {% endif %}
