--- a/application/templates/event.html
+++ b/application/templates/event.html
@@ -9,7 +9,7 @@
         <h1>{{ event.name }}</h1>
         <br>
         <p>Hosting Club: {{ club.name }}</p>
-        <p>Event Time: {{ event.dateTime }}</p>
+        <p>Event Time: {{ event.date }}</p>
         <p>Location: {{ event.address }}</p>
     </div>
 
